# ALKHORA-Management-Dashboard

./: ALKHORA_APP_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MIGRATION_PLAN.md  README.md
management_dashboard/: README.md  pyproject.toml  setup.py
management_dashboard/management_dashboard/: hooks.py
management_dashboard/management_dashboard/api/: annual_summary.py
management_dashboard/management_dashboard/page/management_dashboard/: management_dashboard.css  management_dashboard.js  management_dashboard.json
