[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "management_dashboard"
version = "0.0.1"
description = "ERPNext/Frappe app: annual management dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "license.txt" }
authors = [{ name = "ALKHORA" }]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

